--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <module>auth-service</module>
         <module>user-service</module>
         <module>wallet-service</module>
+        <module>merchant-service</module>
+        <module>payment-gateway</module>
     </modules>
 
     <dependencyManagement>
