--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,82 +1,123 @@
-version: "3.8"
+version: '3.8'
+
+networks:
+  smartpay-net:
+
+volumes:
+  pgdata:
+  mongodata:
+
 services:
   postgres:
     image: postgres:15
     environment:
-      POSTGRES_USER: wallet
-      POSTGRES_PASSWORD: wallet
       POSTGRES_DB: wallet
-    ports: ["5432:5432"]
+      POSTGRES_USER: wallet
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-wallet}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    networks:
+      - smartpay-net
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U wallet"]
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER}"]
       interval: 10s
-      timeout: 5s
       retries: 5
 
   mongodb:
     image: mongo:6
-    ports: ["27017:27017"]
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: wallet
-      MONGO_INITDB_ROOT_PASSWORD: wallet
-
-  redis:
-    image: redis:7-alpine
-    ports: ["6379:6379"]
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodata:/data/db
+    networks:
+      - smartpay-net
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.4.0
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+    networks:
+      - smartpay-net
 
   kafka:
     image: confluentinc/cp-kafka:7.4.0
-    depends_on: [zookeeper]
-    ports: ["9092:9092"]
+    depends_on:
+      - zookeeper
     environment:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-    healthcheck:
-      test: ["CMD-SHELL", "kafka-topics --bootstrap-server localhost:9092 --list"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+    networks:
+      - smartpay-net
 
   auth-service:
-    build: ./auth-service
-    ports: ["9000:9000"]
+    build:
+      context: ./auth-service
+    ports:
+      - "9000:9000"
+    env_file: .env
     depends_on:
-      postgres:
-        condition: service_healthy
+      - postgres
+      - mongodb
+      - kafka
+    networks:
+      - smartpay-net
 
   gateway:
-    build: ./gateway
-    ports: ["8080:8080"]
-    depends_on: [auth-service]
+    build:
+      context: ./gateway
+    ports:
+      - "8081:8080"
+    depends_on:
+      - auth-service
+    networks:
+      - smartpay-net
 
   user-service:
-    build: ./user-service
-    ports: ["8081:8080"]
+    build:
+      context: ./user-service
+    ports:
+      - "9001:9001"
+    env_file: .env
     depends_on:
-      postgres:
-        condition: service_healthy
+      - postgres
+      - kafka
+    networks:
+      - smartpay-net
 
   wallet-service:
-    build: ./wallet-service
-    ports: ["8082:8080"]
+    build:
+      context: ./wallet-service
+    ports:
+      - "9002:9002"
+    env_file: .env
     depends_on:
-      postgres:
-        condition: service_healthy
-      kafka:
-        condition: service_healthy
+      - postgres
+      - kafka
+    networks:
+      - smartpay-net
 
   merchant-service:
-    build: ./merchant-service
-    ports: ["8083:8080"]
-    depends_on: [mongodb]
+    build:
+      context: ./merchant-service
+    ports:
+      - "9003:9003"
+    env_file: .env
+    depends_on:
+      - postgres
+      - kafka
+    networks:
+      - smartpay-net
 
-  payment-gateway-service:
-    build: ./payment-gateway-service
-    ports: ["8084:8080"]
+  payment-gateway:
+    build:
+      context: ./payment-gateway
+    ports:
+      - "9004:9004"
+    env_file: .env
+    depends_on:
+      - kafka
+    networks:
+      - smartpay-net
