--- a/payment-gateway/Dockerfile
+++ b/payment-gateway/Dockerfile
@@ -1,13 +1,16 @@
-# build stage
 FROM maven:3.9.0-eclipse-temurin-17 AS build
 WORKDIR /build
+COPY auth-service auth-service
+COPY gateway gateway
+COPY user-service user-service
+COPY wallet-service wallet-service
+COPY payment-gateway payment-gateway
+COPY merchant-service merchant-service
 COPY pom.xml .
-COPY src ./src
-RUN mvn -B -DskipTests package
+RUN mvn -pl payment-gateway -am -B -DskipTests package
 
-# runtime stage
 FROM eclipse-temurin:17-jre
 WORKDIR /app
-COPY --from=build /build/target/*.jar app.jar
-EXPOSE 8080
+COPY --from=build /build/payment-gateway/target/*.jar app.jar
+EXPOSE 9000
 ENTRYPOINT ["java","-jar","/app/app.jar"]
