--- a/payment-gateway/application.yml
+++ b/payment-gateway/application.yml
@@ -8,3 +8,6 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://auth-service:9000
+jwt:
+  secret: ENC(${JWT_SECRET})
+  expirationMs: 3600000
