--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 networks:
   smartpay-net:
 
@@ -54,7 +52,8 @@ services:
 
   auth-service:
     build:
-      context: ./auth-service
+      context: .
+      dockerfile: auth-service/Dockerfile
     ports:
       - "9000:9000"
     env_file: .env
@@ -67,7 +66,8 @@ services:
 
   gateway:
     build:
-      context: ./gateway
+      context: .
+      dockerfile: gateway/Dockerfile
     ports:
       - "8081:8080"
     depends_on:
@@ -77,7 +77,8 @@ services:
 
   user-service:
     build:
-      context: ./user-service
+      context: .
+      dockerfile: user-service/Dockerfile
     ports:
       - "9001:9001"
     env_file: .env
@@ -89,7 +90,8 @@ services:
 
   wallet-service:
     build:
-      context: ./wallet-service
+      context: .
+      dockerfile: wallet-service/Dockerfile
     ports:
       - "9002:9002"
     env_file: .env
@@ -101,7 +103,8 @@ services:
 
   merchant-service:
     build:
-      context: ./merchant-service
+      context: .
+      dockerfile: merchant-service/Dockerfile
     ports:
       - "9003:9003"
     env_file: .env
@@ -113,7 +116,8 @@ services:
 
   payment-gateway:
     build:
-      context: ./payment-gateway
+      context: .
+      dockerfile: payment-gateway/Dockerfile
     ports:
       - "9004:9004"
     env_file: .env
