--- a/payment-gateway/src/main/resources/appliaction.yml
+++ b/payment-gateway/src/main/resources/appliaction.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: payment-service
+    name: payment-gateway
   datasource:
     url: jdbc:postgresql://localhost:5432/paymentdb
     username: postgres
