--- a/user-service/application.yml
+++ b/user-service/application.yml
@@ -1,5 +1,6 @@
 server:
-  port: 8080
+  port: 8082
+
 spring:
   application:
     name: user-service
@@ -15,3 +16,6 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://auth-service:9000
+jwt:
+  secret: ENC(${JWT_SECRET})
+  expirationMs: 3600000
