--- a/wallet-service/application.yml
+++ b/wallet-service/application.yml
@@ -11,9 +11,13 @@ spring:
     hibernate:
       ddl-auto: update
   kafka:
-    bootstrap-servers: kafka:29092
+    bootstrap-servers: kafka:9092
   security:
     oauth2:
       resourceserver:
         jwt:
           issuer-uri: http://auth-service:9000
+
+jwt:
+  secret: ENC(${JWT_SECRET})
+  expirationMs: 3600000
